src/main/java/com/resilient/re/re/ext/gen/FixRulesParser.java
// Generated from C:/MaheshVibhute/projects/self/kaizen/src/main/resources\FixRules.g4 by ANTLR 4.5.1
package com.resilient.re.re.ext.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FixRulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, ID=40, INT=41, FLOAT=42, NEWLINE=43, WS=44, EQ=45, GR=46, GE=47, 
		LS=48, LE=49, NE=50, MT=51, T=52, A=53, G=54, STRING=55, ACTION_DIRECTOR=56;
	public static final int
		RULE_rules = 0, RULE_ifRule = 1, RULE_rule = 2, RULE_stmt = 3, RULE_action = 4, 
		RULE_tagStmt = 5, RULE_monoOperandOperator = 6, RULE_monoOperand = 7, 
		RULE_tag = 8, RULE_operand = 9, RULE_biOperandOperator = 10, RULE_biOperand = 11, 
		RULE_listOperator = 12, RULE_list = 13, RULE_logicalCondition = 14, RULE_logicalOperator = 15, 
		RULE_logicalOperand = 16, RULE_stringOperand = 17, RULE_andOr = 18, RULE_or = 19, 
		RULE_and = 20, RULE_not = 21, RULE_is = 22, RULE_mustBe = 23, RULE_mustNotBe = 24, 
		RULE_between = 25, RULE_equalTo = 26, RULE_match = 27, RULE_greaterThan = 28, 
		RULE_lessThan = 29, RULE_present = 30, RULE_absent = 31, RULE_alphanumeric = 32, 
		RULE_mandatory = 33, RULE_valid = 34, RULE_consistent = 35, RULE_numeric = 36, 
		RULE_before = 37, RULE_after = 38, RULE_dateToday = 39, RULE_dateTomorrow = 40, 
		RULE_dateYesterday = 41, RULE_date = 42, RULE_onlyIf = 43, RULE_openBracket = 44, 
		RULE_closeBracket = 45;
	public static final String[] ruleNames = {
		"rules", "ifRule", "rule", "stmt", "action", "tagStmt", "monoOperandOperator", 
		"monoOperand", "tag", "operand", "biOperandOperator", "biOperand", "listOperator", 
		"list", "logicalCondition", "logicalOperator", "logicalOperand", "stringOperand", 
		"andOr", "or", "and", "not", "is", "mustBe", "mustNotBe", "between", "equalTo", 
		"match", "greaterThan", "lessThan", "present", "absent", "alphanumeric", 
		"mandatory", "valid", "consistent", "numeric", "before", "after", "dateToday", 
		"dateTomorrow", "dateYesterday", "date", "onlyIf", "openBracket", "closeBracket"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'INCOMPLETE'", "'INVALID'", "'INCONSISTENT'", "'NOTUNIQ'", 
		"'+'", "'tag('", "')'", "'('", "','", "'in'", "'['", "']'", "'or '", "'and '", 
		"'not '", "'is '", "'must be'", "'must not be'", "'between'", "'equal to'", 
		"'match'", "'greater than'", "'less than'", "'present'", "'absent'", "'alphanumeric'", 
		"'mandatory'", "'valid'", "'consistent'", "'numeric'", "'before '", "'after '", 
		"'today'", "'tomorrow'", "'yesterday'", "'if '", "'{'", "'}'", null, null, 
		null, null, null, "'='", "'>'", "'>='", "'<'", "'<='", "'!='", "'~='", 
		null, null, null, null, "'->'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "ID", "INT", "FLOAT", "NEWLINE", "WS", "EQ", "GR", 
		"GE", "LS", "LE", "NE", "MT", "T", "A", "G", "STRING", "ACTION_DIRECTOR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FixRules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FixRulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RulesContext extends ParserRuleContext {
		public List<RuleContext> rule() {
			return getRuleContexts(RuleContext.class);
		}
		public RuleContext rule(int i) {
			return getRuleContext(RuleContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(92);
				rule();
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__6 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfRuleContext extends ParserRuleContext {
		public OnlyIfContext onlyIf() {
			return getRuleContext(OnlyIfContext.class,0);
		}
		public List<TagContext> tag() {
			return getRuleContexts(TagContext.class);
		}
		public TagContext tag(int i) {
			return getRuleContext(TagContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<AndOrContext> andOr() {
			return getRuleContexts(AndOrContext.class);
		}
		public AndOrContext andOr(int i) {
			return getRuleContext(AndOrContext.class,i);
		}
		public List<OpenBracketContext> openBracket() {
			return getRuleContexts(OpenBracketContext.class);
		}
		public OpenBracketContext openBracket(int i) {
			return getRuleContext(OpenBracketContext.class,i);
		}
		public List<CloseBracketContext> closeBracket() {
			return getRuleContexts(CloseBracketContext.class);
		}
		public CloseBracketContext closeBracket(int i) {
			return getRuleContext(CloseBracketContext.class,i);
		}
		public IfRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterIfRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitIfRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitIfRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfRuleContext ifRule() throws RecognitionException {
		IfRuleContext _localctx = new IfRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ifRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			onlyIf();
			setState(98);
			tag();
			setState(99);
			stmt();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13 || _la==T__14) {
				{
				{
				setState(100);
				andOr();
				setState(102);
				_la = _input.LA(1);
				if (_la==T__37) {
					{
					setState(101);
					openBracket();
					}
				}

				setState(104);
				tag();
				setState(105);
				stmt();
				setState(107);
				_la = _input.LA(1);
				if (_la==T__38) {
					{
					setState(106);
					closeBracket();
					}
				}

				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleContext extends ParserRuleContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public IfRuleContext ifRule() {
			return getRuleContext(IfRuleContext.class,0);
		}
		public TerminalNode ACTION_DIRECTOR() { return getToken(FixRulesParser.ACTION_DIRECTOR, 0); }
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(FixRulesParser.NEWLINE, 0); }
		public RuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleContext rule() throws RecognitionException {
		RuleContext _localctx = new RuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			tag();
			setState(115);
			stmt();
			setState(117);
			_la = _input.LA(1);
			if (_la==T__36) {
				{
				setState(116);
				ifRule();
				}
			}

			setState(119);
			match(T__0);
			setState(122);
			_la = _input.LA(1);
			if (_la==ACTION_DIRECTOR) {
				{
				setState(120);
				match(ACTION_DIRECTOR);
				setState(121);
				action();
				}
			}

			setState(125);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(124);
				match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public ListOperatorContext listOperator() {
			return getRuleContext(ListOperatorContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public MonoOperandOperatorContext monoOperandOperator() {
			return getRuleContext(MonoOperandOperatorContext.class,0);
		}
		public TagStmtContext tagStmt() {
			return getRuleContext(TagStmtContext.class,0);
		}
		public MonoOperandContext monoOperand() {
			return getRuleContext(MonoOperandContext.class,0);
		}
		public LogicalConditionContext logicalCondition() {
			return getRuleContext(LogicalConditionContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		try {
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				listOperator();
				setState(128);
				list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				monoOperandOperator();
				setState(131);
				tagStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				monoOperandOperator();
				setState(134);
				monoOperand();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				logicalCondition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_action);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagStmtContext extends ParserRuleContext {
		public List<TagContext> tag() {
			return getRuleContexts(TagContext.class);
		}
		public TagContext tag(int i) {
			return getRuleContext(TagContext.class,i);
		}
		public TagStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterTagStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitTagStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitTagStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagStmtContext tagStmt() throws RecognitionException {
		TagStmtContext _localctx = new TagStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tagStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			tag();
			setState(144); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142);
				match(T__5);
				setState(143);
				tag();
				}
				}
				setState(146); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__5 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MonoOperandOperatorContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(FixRulesParser.EQ, 0); }
		public TerminalNode GR() { return getToken(FixRulesParser.GR, 0); }
		public TerminalNode GE() { return getToken(FixRulesParser.GE, 0); }
		public TerminalNode LS() { return getToken(FixRulesParser.LS, 0); }
		public TerminalNode LE() { return getToken(FixRulesParser.LE, 0); }
		public TerminalNode NE() { return getToken(FixRulesParser.NE, 0); }
		public TerminalNode MT() { return getToken(FixRulesParser.MT, 0); }
		public MonoOperandOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_monoOperandOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterMonoOperandOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitMonoOperandOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitMonoOperandOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MonoOperandOperatorContext monoOperandOperator() throws RecognitionException {
		MonoOperandOperatorContext _localctx = new MonoOperandOperatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_monoOperandOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << GR) | (1L << GE) | (1L << LS) | (1L << LE) | (1L << NE) | (1L << MT))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MonoOperandContext extends ParserRuleContext {
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public MonoOperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_monoOperand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterMonoOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitMonoOperand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitMonoOperand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MonoOperandContext monoOperand() throws RecognitionException {
		MonoOperandContext _localctx = new MonoOperandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_monoOperand);
		try {
			setState(152);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				operand();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				tag();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(FixRulesParser.INT, 0); }
		public TagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagContext tag() throws RecognitionException {
		TagContext _localctx = new TagContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(T__6);
			setState(155);
			match(INT);
			setState(156);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperandContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(FixRulesParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(FixRulesParser.INT, 0); }
		public TerminalNode STRING() { return getToken(FixRulesParser.STRING, 0); }
		public OperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitOperand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitOperand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperandContext operand() throws RecognitionException {
		OperandContext _localctx = new OperandContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_operand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BiOperandOperatorContext extends ParserRuleContext {
		public BetweenContext between() {
			return getRuleContext(BetweenContext.class,0);
		}
		public BiOperandOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_biOperandOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterBiOperandOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitBiOperandOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitBiOperandOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BiOperandOperatorContext biOperandOperator() throws RecognitionException {
		BiOperandOperatorContext _localctx = new BiOperandOperatorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_biOperandOperator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			between();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BiOperandContext extends ParserRuleContext {
		public List<TerminalNode> FLOAT() { return getTokens(FixRulesParser.FLOAT); }
		public TerminalNode FLOAT(int i) {
			return getToken(FixRulesParser.FLOAT, i);
		}
		public List<TerminalNode> INT() { return getTokens(FixRulesParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(FixRulesParser.INT, i);
		}
		public List<DateContext> date() {
			return getRuleContexts(DateContext.class);
		}
		public DateContext date(int i) {
			return getRuleContext(DateContext.class,i);
		}
		public BiOperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_biOperand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterBiOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitBiOperand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitBiOperand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BiOperandContext biOperand() throws RecognitionException {
		BiOperandContext _localctx = new BiOperandContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_biOperand);
		try {
			setState(178);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				match(T__8);
				setState(163);
				match(FLOAT);
				setState(164);
				match(T__9);
				setState(165);
				match(FLOAT);
				setState(166);
				match(T__7);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				match(T__8);
				setState(168);
				match(INT);
				setState(169);
				match(T__9);
				setState(170);
				match(INT);
				setState(171);
				match(T__7);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(172);
				match(T__8);
				setState(173);
				date();
				setState(174);
				match(T__9);
				setState(175);
				date();
				setState(176);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListOperatorContext extends ParserRuleContext {
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public ListOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).enterListOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FixRulesListener ) ((FixRulesListener)listener).exitListOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FixRulesVisitor ) return ((FixRulesVisitor<? extends T>)visitor).visitListOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListOperatorContext listOperator() throws RecognitionException {
		ListOperatorContext _localctx = new ListOperatorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_listOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(180);
				not();
				}
			}

			setState(183);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
